# cc-usage

./: .gitignore  CHANGELOG.md  How_to_Install.md  README.md  pyproject.toml
cc_usage/: __init__.py  aggregate.py  cli.py  detect.py  loader.py  pricing.py  report.py
